--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -7,6 +7,7 @@ $shelf-horizon-padding: 10%;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -19,6 +20,7 @@ main {
 
   &.shelf-container {
     @include flex;
+    padding-top: 2em;
   }
 }
 
