--- a/src/components/shelf/shelf.scss
+++ b/src/components/shelf/shelf.scss
@@ -1,14 +1,16 @@
 @import '../../style/mixin.scss';
 
 .shelf {
+  position: relative;
   @include flex;
-  flex-wrap: nowrap;
-  // width: 100vw;
+  justify-content: center;
 }
 
 .shelf-content-container {
-  flex-grow: 1;
+  position: relative;
+  width: 1000px;
   
+
   & .shelf-header {
     position: relative;
     width: 100%;
@@ -19,7 +21,6 @@
 
     & .sortbox {
       border-radius: 5%;
-      // padding: .5em .1em;
       height: 35px;
       cursor: pointer;
       margin-left: 1em;
@@ -31,9 +32,11 @@
 
   & .products-wraper {
     @include flex;
-    width: 100%;
+    max-width: 1000px;
+    flex-wrap: wrap;
+    
     & > * {
-      width: 25%;
+      width: 233px;
     }
   }
 } 
