--- a/src/containers/layout/layout.scss
+++ b/src/containers/layout/layout.scss
@@ -1,6 +1,63 @@
+* {
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+}
+
 .spec-col {
   background: lightpink;
 }
 .spec-col-dep {
   background: pink;
 }
+
+$bgColorClass: (primary #0078E7 #fff) (blue #00A3CF #fff) (orange #F47837 #fff) !default;
+
+@mixin btn-color($bgColor:#e6e6e6, $textColor:#333){ 
+  color:$textColor; 
+  background-color: $bgColor; 
+  border:1px solid darken($bgColor, 5%); 
+  border-color:lighten($bgColor, 2%) 
+               darken($bgColor, 5%) 
+               darken($bgColor, 5%) 
+               lighten($bgColor, 2%); 
+  &:hover{ 
+    background-color: darken($bgColor,5%); 
+    color:$textColor; 
+  } 
+}
+
+@each $type in $bgColorClass {
+  $class: nth($type, 1);
+  $bgColor: nth($type, 2);
+  $color: nth($type, 3);
+
+  .btn-#{$class} {
+    @include btn-color($bgColor, $color);
+  }
+}
+
+.demo-input-class {
+  margin:20px;
+}
+
+.vertical-step {
+  height: 200px;
+  width: 200px;
+  margin: 0px 30px;
+}
+
+.step-container {
+  position: relative;
+  text-align: left;
+  margin: 10px 0 30px 10px;
+  max-width: 800px;
+}
+
+.bxu-btn {
+  border-radius: 4px;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+}
+
