--- a/src/containers/layout/layout.scss
+++ b/src/containers/layout/layout.scss
@@ -59,5 +59,8 @@ $bgColorClass: (primary #0078E7 #fff) (blue #00A3CF #fff) (orange #F47837 #fff) 
   padding: 5px 10px;
   outline: none;
   cursor: pointer;
+  border: 1px solid #bbb;
+  background: whitesmoke;
+  font-size: 13px;
 }
 
