--- a/src/components/colorPicker/colorPicker.scss
+++ b/src/components/colorPicker/colorPicker.scss
@@ -2,6 +2,14 @@ $spcolor-block_width: 20px;
 $spcolor-block_margin: 10px;
 $spcolor-ver-nb: 6;
 
+@mixin absoluteFullPage {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
 .colorpicker-container {
   position: relative;
 }
@@ -35,6 +43,7 @@ $spcolor-ver-nb: 6;
   border: 1px solid #bbb;
   padding: 10px 0 0 0;
   background: whitesmoke;
+  box-shadow: 0 1px 4px rgba(0,0,0,.2);
 
   & .sketch-preset-color_block {
     border: 1px solid #bbb;
@@ -43,5 +52,37 @@ $spcolor-ver-nb: 6;
     width: $spcolor-block_width;
     height: $spcolor-block_width;
     cursor: pointer;
+  }
+}
+
+/**
+  ColorBoardStyle
+*/
+.bxu-colorboard-container {
+  position: relative;
+  width: 200px;
+  padding: 10px 10px 0px; // bottom = 0;
+  border-radius: 5px;
+  border: 1px solid #bbb;
+  background: #fff;
+}
+
+/**
+  Saturation style
+*/
+.bxu-saturation-container {
+  position: relative;
+  width: 100%;
+  height: 150px;
+  // background: #bbb;
+
+  & .bxu-colorboard-bg_white {
+    @include absoluteFullPage;
+    background: linear-gradient(to right, #fff, rgba(255,255,255,0));
+
+    & .bxu-colorboard-bg_black {
+      @include absoluteFullPage;
+      background: linear-gradient(to top, #000, rgba(0,0,0,0));
+    }
   }
 }
