--- a/src/containers/Picker/pickerdemo.scss
+++ b/src/containers/Picker/pickerdemo.scss
@@ -1,4 +1,9 @@
 ._picker_demo_container {
-  // text-align: center;
-  margin: 200px 0 0 200px;
+  text-align: left;
+  margin: 50px 0 0 200px;
+}
+
+._colorboard_demo_container {
+  text-align: left;
+  margin: 100px 0 0 200px;
 }
