--- a/src/components/colorPicker/colorPicker.scss
+++ b/src/components/colorPicker/colorPicker.scss
@@ -74,7 +74,6 @@ $spcolor-ver-nb: 6;
   position: relative;
   width: 100%;
   height: 150px;
-  // background: #bbb;
 
   & .bxu-colorboard-bg_white {
     @include absoluteFullPage;
@@ -83,6 +82,15 @@ $spcolor-ver-nb: 6;
     & .bxu-colorboard-bg_black {
       @include absoluteFullPage;
       background: linear-gradient(to top, #000, rgba(0,0,0,0));
+      cursor: pointer;
+    }
+
+    & .bxu-colorboard-pointer_wrapper {
+      position: absolute;
+      border-radius: 50%;
+      border: 1px solid white;
+      width: 4px;
+      height: 4px;
     }
   }
 }
