--- a/src/components/colorPicker/colorPicker.scss
+++ b/src/components/colorPicker/colorPicker.scss
@@ -116,7 +116,19 @@ $spcolor-ver-nb: 6;
   right: 0;
   top:0;
   bottom: 0;
+  height: 10px;
+  cursor: pointer;
   background: linear-gradient(to right, rgb(255, 0, 0) 0%,
    rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, 
    rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);
+  
+  & .bxu-hue-slider {
+    position: absolute;
+    margin-top: 1px;
+    height: 8px;
+    width: 3px;
+    background: #fff;
+    // left: 0;
+    cursor: pointer;
+  }
 }
