--- a/src/components/colorPicker/colorPicker.scss
+++ b/src/components/colorPicker/colorPicker.scss
@@ -76,6 +76,12 @@ $spcolor-ver-nb: 6;
       height: 10px;
       margin-bottom: 10px;
     }
+
+    & .bxu-colorboard-slider_alphawrapper {
+      position: relative;
+      width: 100%;
+      height: 10px;
+    }
   }
 }
 
@@ -110,6 +116,9 @@ $spcolor-ver-nb: 6;
   }
 }
 
+/**
+  Hue styles
+*/
 .bxu-hue-area {
   position: absolute;
   left:0;
@@ -126,9 +135,33 @@ $spcolor-ver-nb: 6;
     position: absolute;
     margin-top: 1px;
     height: 8px;
-    width: 3px;
+    width: 4px;
+    transform: translateX(-2px);
     background: #fff;
-    // left: 0;
     cursor: pointer;
+  }
+}
+
+.bxu-alpha-area {
+  position: absolute;
+  left:0;
+  right: 0;
+  top:0;
+  bottom: 0;
+  height: 10px;
+  cursor: pointer;
+  background: linear-gradient(to right, rgb(255, 0, 0) 0%,
+  rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, 
+  rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);
+ 
+  
+  & .bxu-alpha-slider {
+    position: absolute;
+    margin-top: 1px;
+    height: 8px;
+    width: 4px;
+    background: #fff;
+    cursor: pointer;
+    transform: translateX(-2px);
   }
 }
