--- a/src/components/colorPicker/colorPicker.scss
+++ b/src/components/colorPicker/colorPicker.scss
@@ -74,13 +74,14 @@ $spcolor-ver-nb: 6;
       position: relative;
       width: 100%;
       height: 10px;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     & .bxu-colorboard-slider_alphawrapper {
       position: relative;
       width: 100%;
       height: 10px;
+      margin-bottom: 5px;
     }
   }
 }
@@ -143,17 +144,13 @@ $spcolor-ver-nb: 6;
 }
 
 .bxu-alpha-area {
-  position: absolute;
-  left:0;
-  right: 0;
-  top:0;
-  bottom: 0;
+  @include absoluteFullPage;
   height: 10px;
   cursor: pointer;
-  background: linear-gradient(to right, rgb(255, 0, 0) 0%,
-  rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, 
-  rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);
- 
+
+  & .bxu-alpha-checkboard {
+    @include absoluteFullPage;
+  }
   
   & .bxu-alpha-slider {
     position: absolute;
