--- a/src/containers/Picker/pickerdemo.scss
+++ b/src/containers/Picker/pickerdemo.scss
@@ -7,3 +7,8 @@
   text-align: left;
   margin: 100px 0 0 200px;
 }
+
+._only_colorboard_demo_container{
+  text-align: left;
+  margin: 100px 0 0 200px;
+}
