--- a/src/site/index.scss
+++ b/src/site/index.scss
@@ -1,7 +1,8 @@
 .official-demo_container {
   position: relative;
-  padding-top: 10px;
-  
 
+  & .sidebar-container {
+    padding-top: 15px;
+  }
 }
 
