--- a/src/site/sideNav/sideNav.scss
+++ b/src/site/sideNav/sideNav.scss
@@ -1,6 +1,9 @@
+@import '../style/mixin.scss';
+
 $nav-item-height: 40px;
 $padding-title: 15px;
 $padding-left: 15px;
+$padding-item: 0 0 0 15px;
 $activecolor: #3498db;
 $bgColor: #f5f7fa;
 
@@ -35,25 +38,9 @@ $bgColor: #f5f7fa;
         }
         & .nav-item-list {
           & > li {
-            height: $nav-item-height;
-            & a {
-              text-decoration: none;
-              color: lighten(#393838, 10%);
-              font-size: 14px;
-              line-height: $nav-item-height;
-              width: 100%;
-              height: 100%;
-              padding-left: $padding-left;
-              display: inline-block;
-              &:hover {
-                color: $activecolor;
-                background: $bgColor;
-                transition: all .3s ease;
-              }
-              
-            }
-
+            @include nav_link_style($nav-item-height, $padding-item, $activecolor, $bgColor);
           }
+
         }
       }
     }
