--- a/src/site/style/mixin.scss
+++ b/src/site/style/mixin.scss
@@ -1,3 +1,18 @@
-@mixin linkStyle {
-
+@mixin nav_link_style($nav-item-height, $padding, $activecolor, $bgColor) {
+  & a {
+    position: relative;
+    text-decoration: none;
+    color: lighten(#393838, 10%);
+    font-size: 14px;
+    line-height: $nav-item-height;
+    width: 100%;
+    height: 100%;
+    padding: $padding;
+    display: inline-block;
+    &:hover {
+      color: $activecolor;
+      background: $bgColor;
+      transition: all .3s ease;
+    }
+  }
 }
