取消row col设计。float的属性不好掌控。用flex取代。

--- a/src/site/style/index.scss
+++ b/src/site/style/index.scss
@@ -1,8 +1,19 @@
 .official-demo_container {
   position: relative;
 
-  & .sidebar-container {
-    padding-top: 15px;
+  & .main-container {
+    position: relative;
+    text-align: left;
+    display: flex;
+    justify-content: flex-start;
+
+    & .sidebar-container {
+      margin-left: 100px;
+    }
+
+    & .content-container {
+
+    }
   }
 }
 
