--- a/src/containers/Picker/pickerdemo.scss
+++ b/src/containers/Picker/pickerdemo.scss
@@ -1,4 +1,5 @@
 ._picker_demo_container {
+  position: relative;
   text-align: left;
   margin: 50px 0 0 200px;
 }
@@ -9,6 +10,7 @@
 }
 
 ._only_colorboard_demo_container{
+  position: relative;
   text-align: left;
   margin: 100px 0 0 200px;
 }
