--- a/src/site/style/index.scss
+++ b/src/site/style/index.scss
@@ -15,20 +15,21 @@
     & .content-container {
       flex: 4 1 0;
       position: relative;
+      padding: 0 40px;
     }
   }
 }
 
-.markdown-body {
-  box-sizing: border-box;
-  min-width: 200px;
-  max-width: 980px;
-  margin: 0 auto;
-  padding: 45px;
-}
+// .markdown-body {
+//   box-sizing: border-box;
+//   min-width: 200px;
+//   max-width: 980px;
+//   margin: 0 auto;
+//   padding: 45px;
+// }
 
-@media (max-width: 767px) {
-  .markdown-body {
-    padding: 15px;
-  }
-}
+// @media (max-width: 767px) {
+//   .markdown-body {
+//     padding: 15px;
+//   }
+// }
