--- a/src/style/markdown.scss
+++ b/src/style/markdown.scss
@@ -3,8 +3,7 @@
 */
 .bxu-react-container {
   position: relative;
-  padding: 0 40px;
-
+  
   @for $var from 1 to 6 {
     & h#{$var} {
       line-height: 1.5;
@@ -87,6 +86,7 @@
     position: relative;
     padding: 10px;
     background: #f8f8f8;
+    border: 1px solid #eaeefb;
 
     & .hljs-keyword {
       color: #d63200;
