--- a/src/components/Upload/components/UploadPanel/UploadPanel.scss
+++ b/src/components/Upload/components/UploadPanel/UploadPanel.scss
@@ -4,7 +4,7 @@ $upload-label-width: 100px;
     position: relative;
     display: inline-block;
     background: #fff;
-    max-width: 75%;
+    // max-width: 75%;
     padding: 20px;
     vertical-align: middle;
     border-radius: 3px;
@@ -12,12 +12,21 @@ $upload-label-width: 100px;
     font-size: 14px;
     color: #666;
 
+    @media screen and (max-width: 780px) {
+        width: 100%;
+    }
+
+    @media screen and (min-width: 781px) {
+        width: 780px;
+    }
+
+
     & .bxu-uploader-row {
         position: relative;
         display: flex;
         flex-wrap: nowrap;
         justify-content: flex-start;
-        width: 750px;
+        box-sizing: border-box;
         // height: 60px;
 
         & > * {
@@ -27,12 +36,47 @@ $upload-label-width: 100px;
         }
      
         & .upload-label {
+            flex-shrink: 0;
             width: $upload-label-width;
             font-weight: 700;
         }
 
         & .upload-body {
+        }
 
+        & .upload-network-image-wraper {
+            position: relative;
+            flex-grow: 1;
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+
+            & input[type="text"] {
+                flex: 2 1 0;
+                font-size: 10px;
+                flex-grow: 1;
+                outline: none;
+                height: 30px;
+                line-height: 30px;
+                min-width: 80px;
+                border-radius: 2px;
+                border: 1px solid #bbb;
+                padding: 0px 0 0px 10px;
+                &:focus {
+                    border: 1px solid #38f;
+                }
+            }
+
+            & button {
+                border: 1px solid #38f;
+                color: #38f;
+                border-radius: 2px;
+                padding: 6px 16px;
+                font-size: 12px;
+                margin-left: 10px;
+                cursor: pointer;
+                outline: none;
+            }
         }
     }
 
