--- a/src/components/Upload/components/UploadPanel/UploadPanel.scss
+++ b/src/components/Upload/components/UploadPanel/UploadPanel.scss
@@ -20,84 +20,130 @@ $upload-label-width: 100px;
         width: 780px;
     }
 
-
-    & .bxu-uploader-row {
-        position: relative;
+    & .bxu-uploader-head-container {
+        height: 35px;
         display: flex;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
-        box-sizing: border-box;
-        // height: 60px;
+        justify-content: space-between;
+        border-bottom: 1px solid #e5e5e5;
+        margin-bottom: 20px;
 
-        & > * {
-            height: 60px;
-            line-height: 60px;
-            display: inline-block;
-        }
-     
-        & .upload-label {
-            flex-shrink: 0;
-            width: $upload-label-width;
+        & .head-title {
             font-weight: 700;
+            font-size: 14px;
         }
-
-        & .upload-body {
+        & .head-close-button {
+            font-weight: 600;
+            color: #999;
+            font-size: 20px;
+            cursor: pointer;
         }
+    }
 
-        & .upload-network-image-wraper {
+    & .bxu-uploader-content-container {
+      position: relative;
+      height: 480px;
+
+        & .bxu-uploader-row {
             position: relative;
-            flex-grow: 1;
             display: flex;
+            flex-wrap: nowrap;
             justify-content: flex-start;
-            align-items: center;
+            box-sizing: border-box;
+            &:not(:last-child) {
+                margin-bottom: 40px;
+            }
+            // height: 60px;
 
-            & input[type="text"] {
-                flex: 2 1 0;
-                font-size: 10px;
+            & > * {
+                height: 60px;
+                line-height: 60px;
+                display: inline-block;
+            }
+        
+            & .upload-label {
+                flex-shrink: 0;
+                width: $upload-label-width;
+                font-weight: 700;
+            }
+
+            & .upload-body {
+            }
+
+            & .upload-network-image-wraper {
+                position: relative;
                 flex-grow: 1;
-                outline: none;
-                height: 30px;
-                line-height: 30px;
-                min-width: 80px;
-                border-radius: 2px;
-                border: 1px solid #bbb;
-                padding: 0px 0 0px 10px;
-                &:focus {
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
+
+                & input[type="text"] {
+                    flex: 2 1 0;
+                    font-size: 10px;
+                    flex-grow: 1;
+                    outline: none;
+                    height: 30px;
+                    line-height: 30px;
+                    min-width: 80px;
+                    border-radius: 2px;
+                    border: 1px solid #bbb;
+                    padding: 0px 0 0px 10px;
+                    &:focus {
+                        border: 1px solid #38f;
+                    }
+                }
+
+                & button {
                     border: 1px solid #38f;
+                    color: #38f;
+                    border-radius: 2px;
+                    padding: 6px 16px;
+                    font-size: 12px;
+                    margin-left: 10px;
+                    cursor: pointer;
+                    outline: none;
+                    background: #fff;
                 }
             }
+        }
 
-            & button {
-                border: 1px solid #38f;
-                color: #38f;
-                border-radius: 2px;
-                padding: 6px 16px;
-                font-size: 12px;
-                margin-left: 10px;
-                cursor: pointer;
-                outline: none;
+        & .upload-icon {
+            position: relative;
+            display: inline-block;
+            border: 2px dashed #e5e5e5;
+            padding: 35px;
+            border-radius: 4px;
+            cursor: pointer;
+
+            & span {
+                position: absolute;
+                transform: translate(-50%, -50%);
+                font-size: 40px;
+                font-weight: 500;
+                top: 50%;
+                left: 50%;
+                color: #e5e5e5;
+            }
+
+        }
+    }
+
+    & .bxu-uploader-confirm-container {
+        position: relative;
+        & .bxu-confirm {
+            background: #fff;
+            border-radius: 3px;
+            color: #bbb;
+            border: 1px solid #bbb;
+            padding: 8px 20px;
+            &.is-valid {
+                color: #fff;
+                background: #38f;
+                &:hover {
+                    cursor: pointer;
+                    background: lighten(#38f, 10%);
+                    transition: background ease .2s;
+                }
             }
         }
     }
-
-    & .upload-icon {
-        position: relative;
-        display: inline-block;
-        border: 2px dashed #e5e5e5;
-        padding: 35px;
-        border-radius: 4px;
-        cursor: pointer;
-
-        & span {
-            position: absolute;
-            transform: translate(-50%, -50%);
-            font-size: 40px;
-            font-weight: 500;
-            top: 50%;
-            left: 50%;
-            color: #e5e5e5;
-        }
-    
-    }
-
 }
