--- a/src/components/Upload/components/UploadPanel/UploadPanel.scss
+++ b/src/components/Upload/components/UploadPanel/UploadPanel.scss
@@ -1,4 +1,5 @@
 $upload-label-width: 100px;
+$local-image-size: 70px;
 
 .bxu-uploadpanel-layer {
     position: relative;
@@ -67,6 +68,43 @@ $upload-label-width: 100px;
             }
 
             & .upload-body {
+                position: relative;
+                width: 100%;
+                display: flex;
+                justify-content: flex-start;    
+                flex-wrap: nowrap;
+
+                & .local-images-list {
+                    list-style-type: none;
+                    display: flex;
+                    justify-content: flex-start;    
+                    flex-wrap: wrap;
+    
+                    & li {
+                        margin-left: 15px;
+                        & .loal-image-wrapper {
+                            position: relative;
+                            & img {
+                                height: $local-image-size;
+                            }
+                            & svg {
+                                position: absolute;
+                                top: -8px;
+                                right: -8px;
+                                color: #999;
+                                opacity: 0;
+                                cursor: pointer;
+                                &:hover {
+                                    color: darken(#999, 30%);
+                                }
+                            }
+                            &:hover svg {
+                                opacity: 1;
+                                transition: opacity ease .3s;
+                            }
+                        }
+                    }
+                }
             }
 
             & .upload-network-image-wraper {
@@ -110,9 +148,11 @@ $upload-label-width: 100px;
             position: relative;
             display: inline-block;
             border: 2px dashed #e5e5e5;
-            padding: 35px;
+            width: $local-image-size;
+            height: $local-image-size;
             border-radius: 4px;
             cursor: pointer;
+            flex-shrink: 0;
 
             & span {
                 position: absolute;
