--- a/src/components/Upload/components/UploadPanel/UploadPanel.scss
+++ b/src/components/Upload/components/UploadPanel/UploadPanel.scss
@@ -5,7 +5,6 @@ $local-image-size: 70px;
     position: relative;
     display: inline-block;
     background: #fff;
-    // max-width: 75%;
     padding: 20px;
     vertical-align: middle;
     border-radius: 3px;
@@ -43,6 +42,8 @@ $local-image-size: 70px;
     & .bxu-uploader-content-container {
       position: relative;
       height: 480px;
+      overflow-y: auto;
+      overflow-x: hidden;
 
         & .bxu-uploader-row {
             position: relative;
@@ -50,15 +51,13 @@ $local-image-size: 70px;
             flex-wrap: nowrap;
             justify-content: flex-start;
             box-sizing: border-box;
+
             &:not(:last-child) {
                 margin-bottom: 40px;
             }
-            // height: 60px;
 
             & > * {
-                height: 60px;
                 line-height: 60px;
-                display: inline-block;
             }
         
             & .upload-label {
@@ -75,18 +74,20 @@ $local-image-size: 70px;
                 flex-wrap: nowrap;
 
                 & .local-images-list {
-                    list-style-type: none;
-                    display: flex;
-                    justify-content: flex-start;    
-                    flex-wrap: wrap;
+                    display: grid;
+                    grid-template-columns: repeat(auto-fill, $local-image-size);
+                    grid-gap: 20px;
+                    margin-left: 20px;
+                    width: 100%;
     
                     & li {
-                        margin-left: 15px;
-                        & .loal-image-wrapper {
+                        & .local-image-wrapper {
                             position: relative;
-                            & img {
-                                height: $local-image-size;
-                            }
+                            width: 100%;
+                            height: $local-image-size;
+                            background-size: cover; // 自适应
+                            background-position: 50% 50%;
+
                             & svg {
                                 position: absolute;
                                 top: -8px;
@@ -116,7 +117,7 @@ $local-image-size: 70px;
 
                 & input[type="text"] {
                     flex: 2 1 0;
-                    font-size: 10px;
+                    font-size: 13px;
                     flex-grow: 1;
                     outline: none;
                     height: 30px;
@@ -141,6 +142,56 @@ $local-image-size: 70px;
                     outline: none;
                     background: #fff;
                 }
+            }
+
+            & .local-text-list {
+                width: 100%;
+                display: grid;
+                grid-template-columns: repeat(auto-fill, 200px);
+                grid-gap: 10px;
+                margin-right: 5px;
+
+                & li {
+                    & .local-file-wraper {
+                        position: relative;
+                        border: 1px solid #e5e5e5;
+                        padding: 10px 20px;
+                        width: 100%;
+                        line-height: 17px;
+                        text-align: left;
+
+                        & .name-label {
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            font-size: 15px;
+                            word-break: break-all;
+                        }
+    
+                        & .size-label {
+                            color: #999;
+                            font-size: 14px;
+                        }
+    
+                        & svg {
+                            position: absolute;
+                            top: -8px;
+                            right: -8px;
+                            color: #999;
+                            opacity: 0;
+                            cursor: pointer;
+                            z-index: 1100;
+                            &:hover {
+                                color: darken(#999, 30%);
+                            }
+                        }
+                        &:hover svg {
+                            opacity: 1;
+                            transition: opacity ease .3s;
+                        }
+                    }
+                }
+
             }
         }
 
@@ -185,5 +236,8 @@ $local-image-size: 70px;
                 }
             }
         }
+    }
+    & li {
+        list-style-type: none;
     }
 }
