--- a/src/components/Upload/components/UploadPanel/UploadPanel.scss
+++ b/src/components/Upload/components/UploadPanel/UploadPanel.scss
@@ -72,40 +72,6 @@ $local-image-size: 70px;
                 display: flex;
                 justify-content: flex-start;    
                 flex-wrap: nowrap;
-
-                & .local-images-list {
-                    display: grid;
-                    grid-template-columns: repeat(auto-fill, $local-image-size);
-                    grid-gap: 20px;
-                    margin-left: 20px;
-                    width: 100%;
-    
-                    & li {
-                        & .local-image-wrapper {
-                            position: relative;
-                            width: 100%;
-                            height: $local-image-size;
-                            background-size: cover; // 自适应
-                            background-position: 50% 50%;
-
-                            & svg {
-                                position: absolute;
-                                top: -8px;
-                                right: -8px;
-                                color: #999;
-                                opacity: 0;
-                                cursor: pointer;
-                                &:hover {
-                                    color: darken(#999, 30%);
-                                }
-                            }
-                            &:hover svg {
-                                opacity: 1;
-                                transition: opacity ease .3s;
-                            }
-                        }
-                    }
-                }
             }
 
             & .upload-network-image-wraper {
@@ -143,56 +109,6 @@ $local-image-size: 70px;
                     background: #fff;
                 }
             }
-
-            & .local-text-list {
-                width: 100%;
-                display: grid;
-                grid-template-columns: repeat(auto-fill, 200px);
-                grid-gap: 10px;
-                margin-right: 5px;
-
-                & li {
-                    & .local-file-wraper {
-                        position: relative;
-                        border: 1px solid #e5e5e5;
-                        padding: 10px 20px;
-                        width: 100%;
-                        line-height: 17px;
-                        text-align: left;
-
-                        & .name-label {
-                            overflow: hidden;
-                            text-overflow: ellipsis;
-                            white-space: nowrap;
-                            font-size: 15px;
-                            word-break: break-all;
-                        }
-    
-                        & .size-label {
-                            color: #999;
-                            font-size: 14px;
-                        }
-    
-                        & svg {
-                            position: absolute;
-                            top: -8px;
-                            right: -8px;
-                            color: #999;
-                            opacity: 0;
-                            cursor: pointer;
-                            z-index: 1100;
-                            &:hover {
-                                color: darken(#999, 30%);
-                            }
-                        }
-                        &:hover svg {
-                            opacity: 1;
-                            transition: opacity ease .3s;
-                        }
-                    }
-                }
-
-            }
         }
 
         & .upload-icon {
@@ -220,6 +136,8 @@ $local-image-size: 70px;
 
     & .bxu-uploader-confirm-container {
         position: relative;
+        text-align: center;
+
         & .bxu-confirm {
             background: #fff;
             border-radius: 3px;
