--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,17 +1,19 @@
+@import '../../style/animation.scss';
+
 .modal-backdrop {
   position: fixed;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,.6);
+  background-color: rgba(0, 0, 0, 0.6);
   height: 100%;
   z-index: 1050;
 }
 
 .modal-layer {
   &:before {
-    content: '';
+    content: "";
     height: 100%;
     display: inline-block;
     vertical-align: middle;
@@ -29,3 +31,5 @@
     cursor: pointer;
   }
 }
+
+
