零敲碎打，没啥意义的promote。我也不知道为啥还改了5个文件?

--- a/src/style/markdown.scss
+++ b/src/style/markdown.scss
@@ -25,7 +25,7 @@
     }
   }
 
-  & p {
+  & p, & ul li {
     line-height: 20px;
     margin: 14px 0;
     font-size: 14px;
@@ -35,6 +35,10 @@
   &>h3 {
     font-size: 22px;
     margin-top: 40px;
+  }
+
+  & ul {
+    list-style-type: decimal;
   }
 
   & table {
