--- a/src/components/fileUpload/filepondMock/filepondMock.scss
+++ b/src/components/fileUpload/filepondMock/filepondMock.scss
@@ -34,7 +34,7 @@ $max-container-exp-height: 1000px;
     filter: blur(8px);
   }
 
-  &:hover {
+  &.upload-fail {
     // shake effect
     animation: bxu-shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   }
