--- a/src/components/searchInput/searchInput.scss
+++ b/src/components/searchInput/searchInput.scss
@@ -11,8 +11,9 @@
   }
   
   & .bxu-input-wrapper {
-    border: 0;
+    border: none;
     & input {
+      border: none;
       padding: 0 17px;
       &:focus {
         border-bottom: 1px solid #4775B8;
