ali iconfont configuration,  DatePicker.onChange, toggle month upon date change, set selected grid style (light color)

--- a/src/components/datePicker/components/DatePickerHeader/DatePickerHeader.scss
+++ b/src/components/datePicker/components/DatePickerHeader/DatePickerHeader.scss
@@ -35,6 +35,10 @@ $action-icon-color: #5f6368;
         &:hover {
           background: #EEEDED;
         }
+
+        & .ali-icon {
+          width: 0.7em;
+        }
       }
     }
   }
